--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -14,9 +14,9 @@
 <body>
     <script>
         var nome = window.prompt("what's your name ?")
-        document.write(`welcome <Strong>${nome}</Strong> your name has ${nome.length} letters <br/>`) //é possivel colocar tags html aqui
-        document.write( `your name in uppercase is ${nome.toUpperCase()} <br/>`)
-        document.write( `your name in lowercase is ${nome.toLocaleLowerCase()} <br/>`)
+        document.write(`welcome <Strong>${nome}</Strong> your name has ${nome.length} letters <br>`) //é possivel colocar tags html aqui
+        document.write( `your name in uppercase is ${nome.toUpperCase()} <br>`)
+        document.write( `your name in lowercase is ${nome.toLocaleLowerCase()} <br>`)
     </script>
 </body>
 </html>
